--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'org.testng:testng:6.8.8'
 }
