--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,6 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.testng:testng:6.8.8'
+    testCompile 'org.testng:testng:6.8.8'
+    testCompile 'org.mockito:mockito-core:2.2.8'
 }
