--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ### Gradle template
 .gradle
 build/
@@ -56,6 +55,7 @@ hs_err_pid*
 
 # IntelliJ
 /out/
+*.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
